<resources>
    <string name="app_name">epi.gl4.tp5X</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nassim_mohamed">nassim mohamed</string>
    <string name="nassim_mohamed_gmail_com">nassim_mohamed@gmail.com</string>
    <string name="photometer">Photometer</string>
    <string name="proximity">Proximity</string>
    <string name="magnetometer">Magnetometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="all_sensors">All Sensors</string>
    <string name="sensor_data">Sensor Data</string>
</resources>